Solved uneven navbar

--- a/homepage.css
+++ b/homepage.css
@@ -12,7 +12,7 @@ z-index: 1000;
 }
 .hamburger{
     display: none;
-    height:6vh;
+  
     width:7vh;
     margin-top: 1vh; !important
 }
